Refactor Warnings